# mail-to-hero

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/mail_to_hero/: __init__.py  config.py  hero_client.py  imap_poller.py  main.py  parser.py  store.py
tests/: test_parser.py
